CustomObjects/objects/blng__PaymentAllocationDebitNoteLine__c.object
<CustomObject>
    <fields>
        <fullName>blng__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>blng__DebitNoteAllocationId__c</fullName>
        <externalId>true</externalId>
        <label>DebitNoteAllocationId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__DebitNoteLine__c</fullName>
        <label>Debit Note Line</label>
        <referenceTo>blng__DebitNoteLine__c</referenceTo>
        <relationshipLabel>Payment Allocations (Debit Note Line)</relationshipLabel>
        <relationshipName>PaymentAllocationsDebitNoteLine</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line</label>
        <referenceTo>blng__InvoiceLine__c</referenceTo>
        <relationshipLabel>Payment Allocations (Debit Note Line)</relationshipLabel>
        <relationshipName>PaymentAllocationsDebitNoteLine</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>blng__Payment__c</referenceTo>
        <relationshipLabel>Payment Allocations (Debit Note Line)</relationshipLabel>
        <relationshipName>PaymentAllocationsDebitNoteLine</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__TypeAllocationUnallocation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Unallocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unallocated?</label>
        <type>Checkbox</type>
    </fields>
    <label>Payment Allocation (Debit Note Line)</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Allocations (Debit Note Line)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>